--- a/docs/posts/15wk-2.out.ipynb
+++ b/docs/posts/15wk-2.out.ipynb
@@ -11,7 +11,7 @@
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/15wk-2.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>"
       ],
-      "id": "487ca38b-bd0e-4d04-8ba8-734e25bc8f7b"
+      "id": "236ae6cc-3170-4fed-8261-543c5f815dd0"
     },
     {
       "cell_type": "code",
@@ -42,7 +42,7 @@
       "source": [
         "# `1`. 추천시스템 – 30점"
       ],
-      "id": "7f419731-6ca2-4046-b84a-cbbfed5f3af2"
+      "id": "aed61a71-cf13-407d-81ce-29949f96d7ab"
     },
     {
       "cell_type": "code",
@@ -133,7 +133,7 @@
         "\n",
         "이중에서 1,2의 데이터만 사용하여 추천시스템을 설계하기로 하자."
       ],
-      "id": "1bd7beb1-8b58-4099-af6f-2eea72949621"
+      "id": "3c64903f-0fc3-416e-b94f-3424736990d6"
     },
     {
       "cell_type": "code",
@@ -199,7 +199,7 @@
         "df_train[\"movieId\"] = df_train.movieId.map({movie: i for i, movie in enumerate(set(df_train.movieId))})\n",
         "```"
       ],
-      "id": "e62c01f0-9319-4e30-b64b-b77dfcd91348"
+      "id": "eef1cbf4-bc5c-434f-b893-d68d65042408"
     },
     {
       "cell_type": "code",
@@ -221,7 +221,7 @@
         "나누고 적절한 추천시스템을 설계하고 학습하라. 학습결과를 **validation\n",
         "loss**로 검증하라."
       ],
-      "id": "28d6d6b7-299f-4d9d-85f8-3b1ca24c6535"
+      "id": "4b32bbd7-5f1e-4975-9de3-acdb584cb8e5"
     },
     {
       "cell_type": "code",
@@ -254,7 +254,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**(힌트)** 아래의 코드를 이용하라.\n",
+        "**힌트1**: 11wk-1, 5-A (풀이2)를 참고하세요\n",
+        "\n",
+        "**힌트2**: 아래의 코드를 이용하라.\n",
         "\n",
         "``` python\n",
         "class Net(torch.nn.Module):\n",
@@ -290,7 +292,7 @@
         "    print(f\"epoch: {epoc+1}\\t val_loss: {loss_fn(net(X_val).data,y_val):.4f}\")\n",
         "```"
       ],
-      "id": "aeaacf2d-b6e7-4d92-b985-de097dc697fb"
+      "id": "d74e6929-80cf-41ab-bd8a-82aede5ea515"
     },
     {
       "cell_type": "code",
@@ -345,7 +347,7 @@
         "\n",
         "`(2)` 아래는 유저 2265에 대한 정보이다."
       ],
-      "id": "f2db2b3c-6123-4b50-971a-b91cf3e63e5a"
+      "id": "c87b3eeb-8348-4862-bb6e-bf2322cd1fd1"
     },
     {
       "cell_type": "code",
@@ -367,7 +369,7 @@
         "편이다) 영화 {49: `Usual Suspects, The (1995)`} 는 스리럴중에서도 인기가\n",
         "있는 영화인데, 유저 2265는 아직 이 영화를 시청하지 않은듯 보인다."
       ],
-      "id": "2c43fda6-62df-4ea5-b2e9-94dd5df3acb0"
+      "id": "64a08696-8f81-489c-889d-cef1ae7b6161"
     },
     {
       "cell_type": "code",
@@ -392,7 +394,7 @@
         "\n",
         "아래와 같이 hello가 반복되는 자료가 있다고 하자."
       ],
-      "id": "b1d202d9-1126-446f-aebe-c67cb99d6435"
+      "id": "a07d7577-e28e-47f7-931e-e4d8e45d4007"
     },
     {
       "cell_type": "code",
@@ -467,7 +469,7 @@
         "아래는 OpenAI Gym 라이브러리에서 제공하는 환경 Frozen Lake를 구체화하여\n",
         "변수 `env`에 저장하는 코드이다."
       ],
-      "id": "6faa6999-8a71-449a-b4bf-b39dc2ccd2fa"
+      "id": "c8ce544f-2dfa-4b86-b273-7abc138d08ab"
     },
     {
       "cell_type": "code",
@@ -489,26 +491,35 @@
         "에이전트가 얼어붙은 호수 위를 안전하게 건너 목표 지점에 도달하는 것이\n",
         "목표이다. 주요 특징은 다음과 같다.\n",
         "\n",
-        "`1`. **환경 구성**: - 격자형(grid) 환경으로 이루어져 있으며, 각 격자는\n",
-        "4x4 또는 8x8의 형태를 가질 수 있다. (문제에서는 4x4) - 격자는 시작\n",
-        "지점(Start), 목표 지점(Goal), 얼음(Ice), 그리고 구멍(Hole)으로\n",
-        "구성된다. - 에이전트는 시작 지점에서 목표 지점까지 이동해야 한다.\n",
+        "`1`. **환경 구성**:\n",
         "\n",
-        "`2`. **에이전트의 동작**: - 에이전트는 상, 하, 좌, 우로 이동할 수\n",
-        "있다. - 얼음 위에서는 자유롭게 이동할 수 있지만, 구멍에 빠지면\n",
-        "에피소드가 종료된다.\n",
+        "-   격자형(grid) 환경으로 이루어져 있으며, 각 격자는 4x4 또는 8x8의\n",
+        "    형태를 가질 수 있다. (문제에서는 4x4)\n",
+        "-   격자는 시작 지점(Start), 목표 지점(Goal), 얼음(Ice), 그리고\n",
+        "    구멍(Hole)으로 구성된다.\n",
+        "-   에이전트는 시작 지점에서 목표 지점까지 이동해야 한다.\n",
         "\n",
-        "`3`. **보상 체계**: - 에이전트가 목표 지점에 도달하면 +1의 보상을\n",
-        "받는다. - 그 외에는 보상이 없다(0 보상). - 구멍에 빠지거나 목표 지점에\n",
-        "도달하지 못하면 보상은 없다.\n",
+        "`2`. **에이전트의 동작**:\n",
         "\n",
-        "`4`. **목표**: - 에이전트는 강화학습 알고리즘을 사용하여 최적의 경로를\n",
-        "학습하고, 가능한 한 구멍에 빠지지 않고 목표 지점에 도달하는 것이다.\n",
+        "-   에이전트는 상, 하, 좌, 우로 이동할 수 있다.\n",
+        "-   얼음 위에서는 자유롭게 이동할 수 있지만, 구멍에 빠지면 에피소드가\n",
+        "    종료된다.\n",
+        "\n",
+        "`3`. **보상 체계**:\n",
+        "\n",
+        "-   에이전트가 목표 지점에 도달하면 +1의 보상을 받는다.\n",
+        "-   그 외에는 보상이 없다(0 보상).\n",
+        "-   구멍에 빠지거나 목표 지점에 도달하지 못하면 보상은 없다.\n",
+        "\n",
+        "`4`. **목표**:\n",
+        "\n",
+        "-   에이전트는 강화학습 알고리즘을 사용하여 최적의 경로를 학습하고,\n",
+        "    가능한 한 구멍에 빠지지 않고 목표 지점에 도달하는 것이다.\n",
         "\n",
         "아래는 `show` 함수이며, 이는 `env`의 현재상태를 렌더링해주는 역할을\n",
         "한다."
       ],
-      "id": "6c50b715-44e0-4616-9db1-7fbebe84af6a"
+      "id": "bd8eb387-eeda-4b85-aa64-a6b4b31deeb0"
     },
     {
       "cell_type": "code",
@@ -532,7 +543,7 @@
       "source": [
         "`show()` 함수의 사용방법은 아래와 같다."
       ],
-      "id": "33bc412b-ad24-4c8f-ba4f-0d3efd9fd1f7"
+      "id": "8c9cfc2a-ea30-414d-8b77-dc9f54e7d3da"
     },
     {
       "cell_type": "code",
@@ -562,7 +573,7 @@
         "적당한 위의 환경에 대응하는 Agent를 설계하고 `q_net`를 이용하여 올바른\n",
         "행동을 학습하라. 아래는 학습된 결과의 예시이다."
       ],
-      "id": "32aeb5b8-c753-4f85-81df-7c9a124f1704"
+      "id": "e61884c6-47fb-4a04-8da9-fa9e5c96e673"
     },
     {
       "cell_type": "code",
@@ -605,9 +616,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**힌트1:** 아래의 에이전트를 설계에 이용하라."
+        "**힌트1:** 14wk-1,2 의 코드가 아닌 15wk-1 의 코드를 참고하세요\n",
+        "\n",
+        "**힌트2:** 아래의 에이전트를 설계에 이용하라."
       ],
-      "id": "c7f8df13-aed2-41b0-86c3-f099b7c96783"
+      "id": "b28b7d1c-f3a9-423c-a4c4-df824541af75"
     },
     {
       "cell_type": "code",
@@ -661,10 +674,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**힌트2**: `q_net`의 첫 레이어는 `torch.nn.Embedding()`을 이용하라.\n",
+        "**힌트3**: `q_net`의 첫 레이어는 `torch.nn.Embedding()`을 이용하라.\n",
         "\n",
-        "-   상태공간(state space)가 0~15일텐데, 상태 0에서 +1 하면 상태1을\n",
-        "    의미하는게 아니기 때문에 상태공간은 카테고리로 봐야겠죠?\n",
+        "-   상태공간(state space)이 0~15일텐데, `상태1 x 2 = 상태2`,\n",
+        "    `상태3 + 상태2 = 상태1` 와 같은 관계가 성립한다고 보기 어려우므로\n",
+        "    상태공간은 범주형변수로 봐야겠죠?\n",
         "\n",
         "# 4. O/X – 10점\n",
         "\n",
@@ -673,7 +687,7 @@
         "`(1)` Dropout Layer를 추가하면 layer의 추가로 인해 모형이 더 복잡해지며\n",
         "그 결과 모형이 과적합될 수 있다."
       ],
-      "id": "b9765a43-f6c7-411b-9c99-e4191f2b6859"
+      "id": "dadeebd0-be26-4902-b404-c51eb2e82da5"
     }
   ],
   "nbformat": 4,
