--- a/docs/posts/15wk-2.out.ipynb
+++ b/docs/posts/15wk-2.out.ipynb
@@ -11,7 +11,7 @@
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/15wk-2.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>"
       ],
-      "id": "236ae6cc-3170-4fed-8261-543c5f815dd0"
+      "id": "c631ace6-bb8b-4e4d-afc4-8928b18ad5bf"
     },
     {
       "cell_type": "code",
@@ -42,7 +42,7 @@
       "source": [
         "# `1`. 추천시스템 – 30점"
       ],
-      "id": "aed61a71-cf13-407d-81ce-29949f96d7ab"
+      "id": "de8c9689-3d18-47cc-a951-ad59e874e71c"
     },
     {
       "cell_type": "code",
@@ -133,7 +133,7 @@
         "\n",
         "이중에서 1,2의 데이터만 사용하여 추천시스템을 설계하기로 하자."
       ],
-      "id": "3c64903f-0fc3-416e-b94f-3424736990d6"
+      "id": "0c0a70fa-327a-4d96-ba63-05dc87370572"
     },
     {
       "cell_type": "code",
@@ -199,7 +199,7 @@
         "df_train[\"movieId\"] = df_train.movieId.map({movie: i for i, movie in enumerate(set(df_train.movieId))})\n",
         "```"
       ],
-      "id": "eef1cbf4-bc5c-434f-b893-d68d65042408"
+      "id": "cf9a66ea-7700-4a82-8db7-e86658c20a82"
     },
     {
       "cell_type": "code",
@@ -221,7 +221,7 @@
         "나누고 적절한 추천시스템을 설계하고 학습하라. 학습결과를 **validation\n",
         "loss**로 검증하라."
       ],
-      "id": "4b32bbd7-5f1e-4975-9de3-acdb584cb8e5"
+      "id": "bed19c06-6975-4919-8cda-4687493ac081"
     },
     {
       "cell_type": "code",
@@ -292,7 +292,7 @@
         "    print(f\"epoch: {epoc+1}\\t val_loss: {loss_fn(net(X_val).data,y_val):.4f}\")\n",
         "```"
       ],
-      "id": "d74e6929-80cf-41ab-bd8a-82aede5ea515"
+      "id": "dc1d62ff-e4cd-4d62-8035-523ece10188b"
     },
     {
       "cell_type": "code",
@@ -347,7 +347,7 @@
         "\n",
         "`(2)` 아래는 유저 2265에 대한 정보이다."
       ],
-      "id": "c87b3eeb-8348-4862-bb6e-bf2322cd1fd1"
+      "id": "8cf1cb1d-3802-48af-a30c-3f960da63d44"
     },
     {
       "cell_type": "code",
@@ -369,7 +369,7 @@
         "편이다) 영화 {49: `Usual Suspects, The (1995)`} 는 스리럴중에서도 인기가\n",
         "있는 영화인데, 유저 2265는 아직 이 영화를 시청하지 않은듯 보인다."
       ],
-      "id": "64a08696-8f81-489c-889d-cef1ae7b6161"
+      "id": "22af6ca6-abd2-42f3-97a6-c2ebb9cd5048"
     },
     {
       "cell_type": "code",
@@ -394,7 +394,7 @@
         "\n",
         "아래와 같이 hello가 반복되는 자료가 있다고 하자."
       ],
-      "id": "a07d7577-e28e-47f7-931e-e4d8e45d4007"
+      "id": "4a3ae654-a6a3-405d-82f8-3a6bc7a2317f"
     },
     {
       "cell_type": "code",
@@ -462,14 +462,14 @@
         "> 다시보니까 데이터정리하는 방식등이 미묘하게 좀 바껴있어서요, 올해\n",
         "> 강의노트에서 보고 베끼는게 좋을것 같습니다. 이건 뭐 알아서하세요)\n",
         "\n",
-        "# 3. `FrozenLake`\n",
+        "# 3. `FrozenLake` – 30점\n",
         "\n",
         "ref: <https://www.gymlibrary.dev/environments/toy_text/frozen_lake/>\n",
         "\n",
         "아래는 OpenAI Gym 라이브러리에서 제공하는 환경 Frozen Lake를 구체화하여\n",
         "변수 `env`에 저장하는 코드이다."
       ],
-      "id": "c8ce544f-2dfa-4b86-b273-7abc138d08ab"
+      "id": "d31dee0d-a357-41b0-8e15-beac008710df"
     },
     {
       "cell_type": "code",
@@ -519,7 +519,7 @@
         "아래는 `show` 함수이며, 이는 `env`의 현재상태를 렌더링해주는 역할을\n",
         "한다."
       ],
-      "id": "bd8eb387-eeda-4b85-aa64-a6b4b31deeb0"
+      "id": "4f2090da-5376-443c-bf1d-bbca4d273bb5"
     },
     {
       "cell_type": "code",
@@ -543,7 +543,7 @@
       "source": [
         "`show()` 함수의 사용방법은 아래와 같다."
       ],
-      "id": "8c9cfc2a-ea30-414d-8b77-dc9f54e7d3da"
+      "id": "10939788-51e8-474c-8c9c-a605d22211b8"
     },
     {
       "cell_type": "code",
@@ -573,7 +573,7 @@
         "적당한 위의 환경에 대응하는 Agent를 설계하고 `q_net`를 이용하여 올바른\n",
         "행동을 학습하라. 아래는 학습된 결과의 예시이다."
       ],
-      "id": "e61884c6-47fb-4a04-8da9-fa9e5c96e673"
+      "id": "dc9a6b28-7709-479c-b144-1a6264015b3e"
     },
     {
       "cell_type": "code",
@@ -620,7 +620,7 @@
         "\n",
         "**힌트2:** 아래의 에이전트를 설계에 이용하라."
       ],
-      "id": "b28b7d1c-f3a9-423c-a4c4-df824541af75"
+      "id": "0237b026-d6b7-4c3c-ba34-691e6e05b265"
     },
     {
       "cell_type": "code",
@@ -677,7 +677,7 @@
         "**힌트3**: `q_net`의 첫 레이어는 `torch.nn.Embedding()`을 이용하라.\n",
         "\n",
         "-   상태공간(state space)이 0~15일텐데, `상태1 x 2 = 상태2`,\n",
-        "    `상태3 + 상태2 = 상태1` 와 같은 관계가 성립한다고 보기 어려우므로\n",
+        "    `상태3 + 상태2 = 상태5` 와 같은 관계가 성립한다고 보기 어려우므로\n",
         "    상태공간은 범주형변수로 봐야겠죠?\n",
         "\n",
         "# 4. O/X – 10점\n",
@@ -687,7 +687,7 @@
         "`(1)` Dropout Layer를 추가하면 layer의 추가로 인해 모형이 더 복잡해지며\n",
         "그 결과 모형이 과적합될 수 있다."
       ],
-      "id": "dadeebd0-be26-4902-b404-c51eb2e82da5"
+      "id": "7ba1aadf-3fc2-4404-ba7a-c2d09c94401e"
     }
   ],
   "nbformat": 4,
