--- a/docs/posts/15wk-2.out.ipynb
+++ b/docs/posts/15wk-2.out.ipynb
@@ -11,7 +11,7 @@
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/15wk-2.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>"
       ],
-      "id": "1046eaa4-7aec-4916-9e1a-e294022ccb72"
+      "id": "d9db80a5-36f9-4231-b6b4-fcab31cf69d4"
     },
     {
       "cell_type": "code",
@@ -85,7 +85,7 @@
         "\n",
         "이중에서 1,2의 데이터만 사용하여 추천시스템을 설계하기로 하자."
       ],
-      "id": "8825c96b-2994-4e26-be27-7dc107348c2a"
+      "id": "56ebc6b8-1b38-45a3-9fbb-fc2188f498ad"
     },
     {
       "cell_type": "code",
@@ -114,27 +114,46 @@
         "간단히 설명하면 아래와 같다.\n",
         "\n",
         "`1`. `df_ratings`와 `df_movies` CSV 파일을 읽어 데이터프레임으로 만든다.\n",
-        "`python    df_ratings = pd.read_csv(\"ml-20m/ratings.csv\")    df_movies = pd.read_csv(\"ml-20m/movies.csv\")`\n",
+        "\n",
+        "``` python\n",
+        "df_ratings = pd.read_csv(\"ml-20m/ratings.csv\")\n",
+        "df_movies = pd.read_csv(\"ml-20m/movies.csv\")\n",
+        "```\n",
         "\n",
         "`2`. 평점 데이터와 영화 데이터를 합쳐 하나의 데이터프레임\n",
         "`df_train_all`을 만든다.\n",
-        "`python    df_train_all = pd.merge(df_ratings, df_movies)`\n",
+        "\n",
+        "``` python\n",
+        "df_train_all = pd.merge(df_ratings, df_movies)\n",
+        "```\n",
         "\n",
         "`3`. 데이터가 너무 많아 5000명의 유저만 랜덤으로 샘플링한다. (이때 유저\n",
         "`46889`는 반드시 포함)\n",
-        "`python    userId_sampled = np.random.choice(df_train_all.userId.unique(), 5000, replace=False); userId_sampled[0] = 46889`\n",
+        "\n",
+        "``` python\n",
+        "userId_sampled = np.random.choice(df_train_all.userId.unique(), 5000, replace=False); userId_sampled[0] = 46889\n",
+        "```\n",
         "\n",
         "`4`. 샘플링된 5000명의 유저 데이터만 포함하는 새로운 데이터프레임\n",
         "`df_train`을 만든다.\n",
-        "`python    df_train = df_train_all.query(\"userId in @userId_sampled\").reset_index(drop=True)`\n",
+        "\n",
+        "``` python\n",
+        "df_train = df_train_all.query(\"userId in @userId_sampled\").reset_index(drop=True)\n",
+        "```\n",
         "\n",
         "`5`. 유저 ID를 0부터 시작하는 인덱스로 재조정한다.\n",
-        "`python    df_train[\"userId\"] = df_train.userId.map({user: i for i, user in enumerate(set(df_train.userId))})`\n",
+        "\n",
+        "``` python\n",
+        "df_train[\"userId\"] = df_train.userId.map({user: i for i, user in enumerate(set(df_train.userId))})\n",
+        "```\n",
         "\n",
         "`6`. 영화 ID도 0부터 시작하는 인덱스로 재조정한다.\n",
-        "`python    df_train[\"movieId\"] = df_train.movieId.map({movie: i for i, movie in enumerate(set(df_train.movieId))})`"
+        "\n",
+        "``` python\n",
+        "df_train[\"movieId\"] = df_train.movieId.map({movie: i for i, movie in enumerate(set(df_train.movieId))})\n",
+        "```"
       ],
-      "id": "38398a2d-e6dc-4dc2-b75e-aa5f0b54e378"
+      "id": "7d739613-f7c7-4955-8875-148d652a53d5"
     },
     {
       "cell_type": "code",
@@ -156,7 +175,7 @@
         "나누고 적절한 추천시스템을 설계하고 학습하라. 학습결과를 **validation\n",
         "loss**로 검증하라."
       ],
-      "id": "b0bb2e25-f98e-4aed-ab57-8caf505aa4fa"
+      "id": "8780f2fc-a27a-4c62-b1ec-ec21c8f42017"
     },
     {
       "cell_type": "code",
@@ -189,7 +208,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**(힌트)** 아래의 코드를 이용하라.\n",
+        "**힌트1:** 11wk-1, 5-A (풀이2)를 참고하세요\n",
+        "\n",
+        "**힌트2:** 아래의 코드를 이용하세요..\n",
         "\n",
         "``` python\n",
         "class Net(torch.nn.Module):\n",
@@ -225,7 +246,7 @@
         "    print(f\"epoch: {epoc+1}\\t val_loss: {loss_fn(net(X_val).data,y_val):.4f}\")\n",
         "```"
       ],
-      "id": "44e1de6b-858d-4abf-b57d-76b00fe4c1c3"
+      "id": "ae0ab416-e6e5-4f47-8599-692bb37949a9"
     },
     {
       "cell_type": "code",
@@ -282,7 +303,7 @@
         "\n",
         "`(2)` 아래는 유저 2303번에 대한 정보이다."
       ],
-      "id": "fc65dd66-5586-4248-82c9-0c5f9026b381"
+      "id": "7dc8454d-5870-4fb2-bbed-c55e2f34bea0"
     },
     {
       "cell_type": "code",
@@ -304,7 +325,7 @@
         "`Usual Suspects, The (1995)`} 는 스리럴중에서도 인기가 있는 영화인데,\n",
         "유저 2303는 아직 이 영화를 시청하지 않은듯 보인다."
       ],
-      "id": "d2c17038-3a9e-44cf-9df8-c79b07fdf5ec"
+      "id": "52d73c0c-66eb-4a72-ad5f-25ef9b8c49c1"
     },
     {
       "cell_type": "code",
@@ -331,7 +352,7 @@
         "\n",
         "아래와 같이 hello가 반복되는 자료가 있다고 하자."
       ],
-      "id": "362184cd-7ad3-4a39-8e2f-0b43a7228a3b"
+      "id": "5bf37502-25a7-48c9-93b0-82c8bf153be9"
     },
     {
       "cell_type": "code",
@@ -353,8 +374,12 @@
         "`(1)` `torch.nn.RNN()`을 이용하여 다음문자를 예측하는 신경망을 설계하고\n",
         "학습하라. – 12wk-2, 3-C 참고\n",
         "\n",
+        "`(풀이)`\n",
+        "\n",
         "`(2)` `torch.nn.RNNCell()`을 이용하여 다음문자를 예측하는 신경망을\n",
         "설계하고 학습하라. – 12wk-1, hw 참고\n",
+        "\n",
+        "`(풀이)`\n",
         "\n",
         "`(3)` `(2)`의 결과와 동일한 적합값을 출력하는 신경망을 직접설계한뒤\n",
         "학습시켜라. (초기값을 적절하게 설정할 것)\n",
@@ -379,11 +404,17 @@
         "    학습시킬시 점수 없음. (초기값을 셋팅하는 용도로는 torch.nn.RNN(),\n",
         "    torch.nn.RNNCell()을 코드에 포함시키는 것이 가능)\n",
         "\n",
+        "`(풀이)`\n",
+        "\n",
         "`(4)` `torch.nn.LSTM()`을 이용하여 다음문자를 예측하는 신경망을 설계하고\n",
         "학습하라. – 13wk-1, 4-C 참고\n",
         "\n",
+        "`(풀이)`\n",
+        "\n",
         "`(5)` `torch.nn.LSTMCell()`을 이용하여 다음문자를 예측하는 신경망을\n",
         "설계하고 학습하라. – 13wk-1, 4-A 참고\n",
+        "\n",
+        "`(풀이)`\n",
         "\n",
         "`(6)` `(5)`’의 결과와 동일한 적합값을 출력하는 신경망을 직접설계한 뒤\n",
         "학습시켜라. (초기값을 적절하게 설정할 것) – 13wk-1, 4-B 참고\n",
@@ -395,9 +426,11 @@
         "\n",
         "> 이 문제는 전체적으로\n",
         "> <https://guebin.github.io/DL2022/posts/2022-11-29-13wk-2-final.html>\n",
-        "> 의 1번과 비슷하니 해당문제 정답을 참고하셔도 됩니다. (근데 뭔가 제가\n",
+        "> 의 1번과 비슷하니 해당문제 정답을 참고하셔도 됩니다. (근데 제가\n",
         "> 다시보니까 데이터정리하는 방식등이 미묘하게 좀 바껴있어서요, 올해\n",
         "> 강의노트에서 보고 베끼는게 좋을것 같습니다. 이건 뭐 알아서하세요)\n",
+        "\n",
+        "`(풀이)`\n",
         "\n",
         "# 3. `FrozenLake` – 30점\n",
         "\n",
@@ -406,7 +439,7 @@
         "아래는 OpenAI Gym 라이브러리에서 제공하는 환경 Frozen Lake를 구체화하여\n",
         "변수 `env`에 저장하는 코드이다."
       ],
-      "id": "1dd6369e-1a9b-478a-bbbb-feece296e496"
+      "id": "86dcf224-6bc3-47a3-a585-38d19c3a66de"
     },
     {
       "cell_type": "code",
@@ -456,7 +489,7 @@
         "아래는 `show` 함수이며, 이는 `env`의 현재상태를 렌더링해주는 역할을\n",
         "한다."
       ],
-      "id": "92b0465e-9f49-480a-8026-3eb6c90a5be7"
+      "id": "64011d46-a1e1-4a99-99c8-031a0dd0d6f4"
     },
     {
       "cell_type": "code",
@@ -480,7 +513,7 @@
       "source": [
         "`show()` 함수의 사용방법은 아래와 같다."
       ],
-      "id": "0123d1c0-771b-48aa-a7b0-c5a0e137aa39"
+      "id": "ebd64ca6-d814-4bb7-ba97-fb2690f01153"
     },
     {
       "cell_type": "code",
@@ -510,7 +543,7 @@
         "적당한 위의 환경에 대응하는 Agent를 설계하고 `q_net`를 이용하여 올바른\n",
         "행동을 학습하라. 아래는 학습된 결과의 예시이다."
       ],
-      "id": "48fc0642-009a-49ca-be71-8645b11cc0cb"
+      "id": "16cdcd0a-43e6-4c59-aff8-8185b387c538"
     },
     {
       "cell_type": "code",
@@ -555,9 +588,9 @@
       "source": [
         "**힌트1:** 14wk-1,2 의 코드가 아닌 15wk-1 의 코드를 참고하세요\n",
         "\n",
-        "**힌트2:** 아래의 에이전트를 설계에 이용하라."
+        "**힌트2:** 아래의 에이전트를 설계에 이용하세요"
       ],
-      "id": "78482bbf-ff8d-4b70-9b9e-3a3cbe71b913"
+      "id": "65674df2-872c-4fe7-a234-36798516d125"
     },
     {
       "cell_type": "code",
@@ -611,11 +644,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**힌트3**: `q_net`의 첫 레이어는 `torch.nn.Embedding()`을 이용하라.\n",
+        "**힌트3**: `q_net`의 첫 레이어는 `torch.nn.Embedding()`을 이용하세요\n",
         "\n",
         "-   상태공간(state space)이 0~15일텐데, `상태1 x 2 = 상태2`,\n",
         "    `상태3 + 상태2 = 상태5` 와 같은 관계가 성립한다고 보기 어려우므로\n",
         "    상태공간은 범주형변수로 봐야겠죠?\n",
+        "\n",
+        "`(풀이)`\n",
         "\n",
         "# 4. O/X – 10점\n",
         "\n",
@@ -624,7 +659,7 @@
         "`(1)` Dropout Layer를 추가하면 layer의 추가로 인해 모형이 더 복잡해지며\n",
         "그 결과 모형이 과적합될 수 있다."
       ],
-      "id": "ab9818e0-b6e3-4d7e-95d3-da4ff1b000a1"
+      "id": "f7ee108c-785f-43b0-89a6-7465b11e60cf"
     }
   ],
   "nbformat": 4,
