--- a/docs/posts/15wk-2.out.ipynb
+++ b/docs/posts/15wk-2.out.ipynb
@@ -11,7 +11,7 @@
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/15wk-2.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>"
       ],
-      "id": "afc9734e-a384-4229-8454-3f03c1624e05"
+      "id": "de9d1806-4333-4b78-bca3-66b3874ef510"
     },
     {
       "cell_type": "code",
@@ -62,30 +62,47 @@
         "2천만 개의 영화 평점과 메타데이터를 포함하고 있다. 주요 파일과 그 내용은\n",
         "다음과 같다:\n",
         "\n",
-        "`1`. **ratings.csv**: - **userId**: 사용자의 고유 ID - **movieId**:\n",
-        "영화의 고유 ID - **rating**: 사용자가 부여한 평점 (1.0에서 5.0 사이의\n",
-        "값) - **timestamp**: 평점이 부여된 시간 (유닉스 타임스탬프 형식)\n",
+        "`1`. **ratings.csv**:\n",
         "\n",
-        "`2`. **movies.csv**: - **movieId**: 영화의 고유 ID - **title**: 영화\n",
-        "제목 - **genres**: 영화 장르 (여러 개의 장르가 ’\\|’로 구분됨)\n",
+        "-   **userId**: 사용자의 고유 ID\n",
+        "-   **movieId**: 영화의 고유 ID\n",
+        "-   **rating**: 사용자가 부여한 평점 (1.0에서 5.0 사이의 값)\n",
+        "-   **timestamp**: 평점이 부여된 시간 (유닉스 타임스탬프 형식)\n",
         "\n",
-        "`3`. **tags.csv**: - **userId**: 사용자의 고유 ID - **movieId**: 영화의\n",
-        "고유 ID - **tag**: 사용자가 부여한 태그 - **timestamp**: 태그가 부여된\n",
-        "시간 (유닉스 타임스탬프 형식)\n",
+        "`2`. **movies.csv**:\n",
         "\n",
-        "`4`. **genome-scores.csv**: - **movieId**: 영화의 고유 ID - **tagId**:\n",
-        "태그의 고유 ID - **relevance**: 해당 태그가 영화에 얼마나 관련 있는지\n",
-        "나타내는 점수 (0.0에서 1.0 사이의 값)\n",
+        "-   **movieId**: 영화의 고유 ID\n",
+        "-   **title**: 영화 제목\n",
+        "-   **genres**: 영화 장르 (여러 개의 장르가 ’\\|’로 구분됨)\n",
         "\n",
-        "`5`. **genome-tags.csv**: - **tagId**: 태그의 고유 ID - **tag**: 태그의\n",
-        "이름\n",
+        "`3`. **tags.csv**:\n",
         "\n",
-        "`6`. **links.csv**: - **movieId**: 영화의 고유 ID - **imdbId**:\n",
-        "IMDB에서의 영화 ID - **tmdbId**: TMDB에서의 영화 ID\n",
+        "-   **userId**: 사용자의 고유 ID\n",
+        "-   **movieId**: 영화의 고유 ID\n",
+        "-   **tag**: 사용자가 부여한 태그\n",
+        "-   **timestamp**: 태그가 부여된 시간 (유닉스 타임스탬프 형식)\n",
+        "\n",
+        "`4`. **genome-scores.csv**:\n",
+        "\n",
+        "-   **movieId**: 영화의 고유 ID\n",
+        "-   **tagId**: 태그의 고유 ID\n",
+        "-   **relevance**: 해당 태그가 영화에 얼마나 관련 있는지 나타내는 점수\n",
+        "    (0.0에서 1.0 사이의 값)\n",
+        "\n",
+        "`5`. **genome-tags.csv**:\n",
+        "\n",
+        "-   **tagId**: 태그의 고유 ID\n",
+        "-   **tag**: 태그의 이름\n",
+        "\n",
+        "`6`. **links.csv**:\n",
+        "\n",
+        "-   **movieId**: 영화의 고유 ID\n",
+        "-   **imdbId**: IMDB에서의 영화 ID\n",
+        "-   **tmdbId**: TMDB에서의 영화 ID\n",
         "\n",
         "이중에서 1,2의 데이터만 사용하여 추천시스템을 설계하기로 하자."
       ],
-      "id": "2e816805-3816-445a-b2c4-8d2109e466ea"
+      "id": "4d09806a-577d-455a-87a8-b30bb2448c24"
     },
     {
       "cell_type": "code",
@@ -153,7 +170,7 @@
         "df_train[\"movieId\"] = df_train.movieId.map({movie: i for i, movie in enumerate(set(df_train.movieId))})\n",
         "```"
       ],
-      "id": "572fd19c-a1ec-434d-b739-334d2a9efab8"
+      "id": "11323551-2955-4120-942e-6e42a373301a"
     },
     {
       "cell_type": "code",
@@ -175,7 +192,7 @@
         "나누고 적절한 추천시스템을 설계하고 학습하라. 학습결과를 **validation\n",
         "loss**로 검증하라."
       ],
-      "id": "5fa56d46-7a9e-41f0-a915-339b1a7ab2b2"
+      "id": "1e951a5a-3463-4fd7-92ed-85c1eb8438df"
     },
     {
       "cell_type": "code",
@@ -246,7 +263,7 @@
         "    print(f\"epoch: {epoc+1}\\t val_loss: {loss_fn(net(X_val).data,y_val):.4f}\")\n",
         "```"
       ],
-      "id": "2629ab82-6d17-4afb-a916-7725e6288d9d"
+      "id": "b56ee590-0489-4463-b8a5-087e84cbf4df"
     },
     {
       "cell_type": "code",
@@ -303,7 +320,7 @@
         "\n",
         "`(2)` 아래는 유저 2303번에 대한 정보이다."
       ],
-      "id": "9c39d22b-14b5-4ed7-bbd9-4bdd31545647"
+      "id": "802ca3d7-e70d-4391-bc57-0d5ecd73628b"
     },
     {
       "cell_type": "code",
@@ -325,7 +342,7 @@
         "`Usual Suspects, The (1995)`} 는 스리럴중에서도 인기가 있는 영화인데,\n",
         "유저 2303는 아직 이 영화를 시청하지 않은듯 보인다."
       ],
-      "id": "c07cfe07-85e0-4809-8808-f263b0c31b17"
+      "id": "67d55598-8ba0-4780-9dd7-a081078b3984"
     },
     {
       "cell_type": "code",
@@ -352,7 +369,7 @@
         "\n",
         "아래와 같이 hello가 반복되는 자료가 있다고 하자."
       ],
-      "id": "f476725e-a910-4ebd-9b64-856549dc8f6c"
+      "id": "33eb6d7c-44f4-45f0-9703-cfedbf1746ef"
     },
     {
       "cell_type": "code",
@@ -439,7 +456,7 @@
         "아래는 OpenAI Gym 라이브러리에서 제공하는 환경 Frozen Lake를 구체화하여\n",
         "변수 `env`에 저장하는 코드이다."
       ],
-      "id": "c6806842-fb9d-470c-ae37-b0e97240507a"
+      "id": "01980540-762b-4ca8-a13f-b3b569d04a0e"
     },
     {
       "cell_type": "code",
@@ -489,7 +506,7 @@
         "아래는 `show` 함수이며, 이는 `env`의 현재상태를 렌더링해주는 역할을\n",
         "한다."
       ],
-      "id": "ad0b5935-c489-4518-9765-58a13d53a0e5"
+      "id": "d3889dd4-170b-495c-b8e1-889ee9d290e4"
     },
     {
       "cell_type": "code",
@@ -513,7 +530,7 @@
       "source": [
         "`show()` 함수의 사용방법은 아래와 같다."
       ],
-      "id": "45936ea4-935a-4d6e-b4e0-154f39cfe16f"
+      "id": "404a93fc-8c44-468f-809a-2e15fef04d99"
     },
     {
       "cell_type": "code",
@@ -543,7 +560,7 @@
         "적당한 위의 환경에 대응하는 Agent를 설계하고 `q_net`를 이용하여 올바른\n",
         "행동을 학습하라. 아래는 학습된 결과의 예시이다."
       ],
-      "id": "0978b9e2-ed5b-4a8f-863b-05222795a73c"
+      "id": "97664e88-3ec6-4dee-8143-af0da29401ba"
     },
     {
       "cell_type": "code",
@@ -590,7 +607,7 @@
         "\n",
         "**힌트2:** 아래의 에이전트를 설계에 이용하세요"
       ],
-      "id": "20eafb59-f6b7-4ad4-9c13-26be33f0b92b"
+      "id": "a7123f88-cbcc-4d01-83cc-a80eca886f06"
     },
     {
       "cell_type": "code",
@@ -659,7 +676,7 @@
         "`(1)` Dropout Layer를 추가하면 layer의 추가로 인해 모형이 더 복잡해지며\n",
         "그 결과 모형이 과적합될 수 있다."
       ],
-      "id": "0b5f2756-40fd-49c5-a38e-1b9c26d4ab05"
+      "id": "5c704027-8c24-4a37-b3d8-c806b6e8ba5d"
     }
   ],
   "nbformat": 4,
