--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "0caaa83d-59ea-460b-a036-a9351bcad837"
+      "id": "cb2aaf3f-d08b-4b5e-916f-94f3f6c7a009"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "422c498b-72df-4dec-83d5-d98500255e53"
+      "id": "5850c3d5-86b0-4919-8b37-2abc70769b47"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "97e39a80-84c7-46ba-a429-8f6ad8408645"
+      "id": "9c07e010-54be-4d29-9825-c3481d7d9197"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "76985368-9b8b-402a-be71-725e58a0dad7"
+      "id": "9a93c7a4-2440-41ad-b0f6-2d5bee2bfd74"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "65773dff-2f99-42f6-b5fb-1ee70e92127b"
+      "id": "02ad5547-4b6d-4f09-ae5d-cac013df7e62"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "d8476560-50cc-4e44-81e7-c2ef3f586d5c"
+      "id": "5b77fb45-5efe-4050-b45a-156140389b24"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "c153d7cc-4718-4c18-9e12-09d702c11c6b"
+      "id": "da6c8ef9-2bb7-4e52-9832-6a7314c27844"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "060b5519-2ac6-4c6a-b8d8-86553cc52c87"
+      "id": "6437c597-905f-49b5-aed9-2ff53078b3ac"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "86dce7fb-ee1e-40cf-94ab-19d1602760f7"
+      "id": "840d3d76-9556-4fec-b99d-e4b2d8773dbd"
     },
     {
       "cell_type": "code",
@@ -385,11 +385,22 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
+        "    v_{11} & v_{12}  \\\\\n",
+        "    v_{21} & v_{22}  \\\\\n",
+        "    \\dots & \\dots  \\\\\n",
+        "    v_{n1} & v_{n2}  \\\\\n",
+        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
+        "    \\begin{bmatrix}\n",
+        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
+        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
+        "    \\dots \\\\\n",
+        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
+        "    \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "d993104c-5e26-42a2-8c5c-7f84caa4091a"
+      "id": "6c71e64a-8bc5-4904-96d7-296328a27ea2"
     },
     {
       "cell_type": "code",
@@ -412,7 +423,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "b15e5a7d-d00d-44ef-82ec-7039c7e6fca9"
+      "id": "07b88a5d-89fd-45fd-b172-de5111ae9d62"
     },
     {
       "cell_type": "code",
@@ -467,7 +478,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "6b1654ca-2fa2-4817-a856-c1e3200607b7"
+      "id": "94670e22-b001-4a95-b407-aad336614f06"
     },
     {
       "cell_type": "code",
@@ -514,7 +525,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "1a920e98-bcb4-40ab-9b9d-f448b1e5c5ef"
+      "id": "51f94e0b-40e8-4794-9f86-1b68bfff684d"
     },
     {
       "cell_type": "code",
@@ -553,7 +564,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "b7d80911-f39e-4303-9e9f-0743e7936cbd"
+      "id": "f29c1b8d-5ffc-4dfd-8803-efe3db604bcc"
     },
     {
       "cell_type": "code",
@@ -622,7 +633,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "81500ccf-1de6-4015-a2d4-aa2e2ae09b09"
+      "id": "7f579675-1cba-48e4-bd14-7ba329c46748"
     },
     {
       "cell_type": "code",
@@ -687,7 +698,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "4e2d0ad8-7bf4-4061-80e1-fda8accf975d"
+      "id": "5fd53c54-ab59-406d-b2dc-1f4feea99c91"
     },
     {
       "cell_type": "code",
