--- a/docs/posts/15wk-2.out.ipynb
+++ b/docs/posts/15wk-2.out.ipynb
@@ -11,7 +11,38 @@
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/15wk-2.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>"
       ],
-      "id": "cf19bd64-7441-4001-b476-73e4fce048df"
+      "id": "d0b12312-7998-444a-b42b-0cd1efafddbb"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "import torch\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "#--# 문제1\n",
+        "import pandas as pd\n",
+        "import sklearn.model_selection\n",
+        "#--# 문제3\n",
+        "import gymnasium as gym\n",
+        "import IPython\n",
+        "from matplotlib.animation import FuncAnimation\n",
+        "import collections\n",
+        "import random"
+      ],
+      "id": "bc72c5c9-6d8d-4b02-a8a7-2819420e857f"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# `1`. 추천시스템 – 30점"
+      ],
+      "id": "e9ff242e-fe56-4b7f-b8ff-02703cbc77e5"
     },
     {
       "cell_type": "code",
@@ -102,7 +133,7 @@
         "\n",
         "이중에서 1,2의 데이터만 사용하여 추천시스템을 설계하기로 하자."
       ],
-      "id": "e7b97ad3-195e-4751-8161-f5b105836610"
+      "id": "f32174a7-7205-4ada-b3c2-abb8a2d876c5"
     },
     {
       "cell_type": "code",
@@ -170,7 +201,7 @@
         "df_train[\"movieId\"] = df_train.movieId.map({movie: i for i, movie in enumerate(set(df_train.movieId))})\n",
         "```"
       ],
-      "id": "ee6a23fe-bfd7-4fed-8b56-f1fd561e21b2"
+      "id": "7119b033-775b-474d-a692-d8c2d3c0dfae"
     },
     {
       "cell_type": "code",
@@ -192,7 +223,7 @@
         "나누고 적절한 추천시스템을 설계하고 학습하라. 학습결과를 **validation\n",
         "loss**로 검증하라."
       ],
-      "id": "765bdd7a-3272-4f05-9fd1-97d988f86975"
+      "id": "b2fff2af-3d0e-4d2e-a24c-e0d6749aea25"
     },
     {
       "cell_type": "code",
@@ -263,7 +294,7 @@
         "    print(f\"epoch: {epoc+1}\\t val_loss: {loss_fn(net(X_val).data,y_val):.4f}\")\n",
         "```"
       ],
-      "id": "4a139dd2-f940-4f38-9a6b-f90c3c8e32de"
+      "id": "4c477344-d328-4cd7-afc8-4f4bd36fa264"
     },
     {
       "cell_type": "code",
@@ -318,7 +349,7 @@
         "\n",
         "`(2)` 아래는 유저 2303번에 대한 정보이다."
       ],
-      "id": "141dfa14-a25b-4e28-bd32-6e53b768c3e2"
+      "id": "94863425-4bce-4a1b-964d-78d20ed441e2"
     },
     {
       "cell_type": "code",
@@ -340,7 +371,7 @@
         "`Usual Suspects, The (1995)`} 는 스리럴중에서도 인기가 있는 영화인데,\n",
         "유저 2303는 아직 이 영화를 시청하지 않은듯 보인다."
       ],
-      "id": "f9977135-b777-4443-9362-1d4b01ed4f93"
+      "id": "71aab355-bea2-4e9a-b6b0-4b63a985393b"
     },
     {
       "cell_type": "code",
@@ -365,7 +396,7 @@
         "\n",
         "아래와 같이 hello가 반복되는 자료가 있다고 하자."
       ],
-      "id": "a4d4bbbf-9889-4cb5-8e5e-d2e5b0cbacf3"
+      "id": "5f35f8a0-0676-43bf-80be-f77ddb6a15e6"
     },
     {
       "cell_type": "code",
@@ -440,7 +471,7 @@
         "아래는 OpenAI Gym 라이브러리에서 제공하는 환경 Frozen Lake를 구체화하여\n",
         "변수 `env`에 저장하는 코드이다."
       ],
-      "id": "e261d1a6-f8e7-4e1d-aa6a-59934f7685c4"
+      "id": "875bf3e7-e490-4ac2-9ff1-0f8cff8d2725"
     },
     {
       "cell_type": "code",
@@ -490,7 +521,7 @@
         "아래는 `show` 함수이며, 이는 `env`의 현재상태를 렌더링해주는 역할을\n",
         "한다."
       ],
-      "id": "d6ce4c72-3ebe-4c4f-af45-69fdc6367879"
+      "id": "a4e8798a-db4f-44e7-aa42-cfadf7e3203c"
     },
     {
       "cell_type": "code",
@@ -514,7 +545,7 @@
       "source": [
         "`show()` 함수의 사용방법은 아래와 같다."
       ],
-      "id": "4a11bf8f-107e-4df1-9ad8-f8c459a86371"
+      "id": "11735454-f19e-41d3-b376-724d501d7b3a"
     },
     {
       "cell_type": "code",
@@ -544,7 +575,7 @@
         "적당한 위의 환경에 대응하는 Agent를 설계하고 `q_net`를 이용하여 올바른\n",
         "행동을 학습하라. 아래는 학습된 결과의 예시이다."
       ],
-      "id": "c31485b3-c4db-4890-930c-6a4d3aeaa5f7"
+      "id": "5699a303-0516-450e-992b-8573aa4e61dd"
     },
     {
       "cell_type": "code",
@@ -591,7 +622,7 @@
         "\n",
         "**힌트2:** 아래의 에이전트를 설계에 이용하세요"
       ],
-      "id": "dfbde55f-1d8e-42ee-bd57-c5ddefe3dcc7"
+      "id": "141f1f17-5d31-4d3c-9cd3-e4254d349791"
     },
     {
       "cell_type": "code",
@@ -658,7 +689,7 @@
         "`(1)` Dropout Layer를 추가하면 layer의 추가로 인해 모형이 더 복잡해지며\n",
         "그 결과 모형이 과적합될 수 있다."
       ],
-      "id": "4979a411-0aff-486e-972d-0a55c8cdf1a9"
+      "id": "4633941e-57df-457e-bfa7-58bd7535d6d5"
     }
   ],
   "nbformat": 4,
@@ -679,7 +710,7 @@
       "mimetype": "text/x-python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.8"
+      "version": "3.10.13"
     }
   }
 }
