--- a/docs/posts/15wk-2.out.ipynb
+++ b/docs/posts/15wk-2.out.ipynb
@@ -11,7 +11,7 @@
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/15wk-2.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>"
       ],
-      "id": "d0b12312-7998-444a-b42b-0cd1efafddbb"
+      "id": "5f450bec-4a6d-4a03-9d13-9c2e5ac9fabf"
     },
     {
       "cell_type": "code",
@@ -42,7 +42,7 @@
       "source": [
         "# `1`. 추천시스템 – 30점"
       ],
-      "id": "e9ff242e-fe56-4b7f-b8ff-02703cbc77e5"
+      "id": "ee9d094a-5c5b-4fe1-b505-2c1d22b5de90"
     },
     {
       "cell_type": "code",
@@ -133,7 +133,7 @@
         "\n",
         "이중에서 1,2의 데이터만 사용하여 추천시스템을 설계하기로 하자."
       ],
-      "id": "f32174a7-7205-4ada-b3c2-abb8a2d876c5"
+      "id": "34b43d99-3824-4446-99ef-4e02a790944c"
     },
     {
       "cell_type": "code",
@@ -201,7 +201,7 @@
         "df_train[\"movieId\"] = df_train.movieId.map({movie: i for i, movie in enumerate(set(df_train.movieId))})\n",
         "```"
       ],
-      "id": "7119b033-775b-474d-a692-d8c2d3c0dfae"
+      "id": "2125c68e-36b6-461c-9657-d0275f7dd258"
     },
     {
       "cell_type": "code",
@@ -223,7 +223,7 @@
         "나누고 적절한 추천시스템을 설계하고 학습하라. 학습결과를 **validation\n",
         "loss**로 검증하라."
       ],
-      "id": "b2fff2af-3d0e-4d2e-a24c-e0d6749aea25"
+      "id": "d4bad39f-6e2d-4b55-b2fd-c8bd89a2d45d"
     },
     {
       "cell_type": "code",
@@ -294,7 +294,7 @@
         "    print(f\"epoch: {epoc+1}\\t val_loss: {loss_fn(net(X_val).data,y_val):.4f}\")\n",
         "```"
       ],
-      "id": "4c477344-d328-4cd7-afc8-4f4bd36fa264"
+      "id": "51b4a687-750d-460a-916a-d2fa078a655c"
     },
     {
       "cell_type": "code",
@@ -349,7 +349,7 @@
         "\n",
         "`(2)` 아래는 유저 2303번에 대한 정보이다."
       ],
-      "id": "94863425-4bce-4a1b-964d-78d20ed441e2"
+      "id": "0a8501aa-44e6-42e8-a6f1-2bad20c0d7e7"
     },
     {
       "cell_type": "code",
@@ -371,7 +371,7 @@
         "`Usual Suspects, The (1995)`} 는 스리럴중에서도 인기가 있는 영화인데,\n",
         "유저 2303는 아직 이 영화를 시청하지 않은듯 보인다."
       ],
-      "id": "71aab355-bea2-4e9a-b6b0-4b63a985393b"
+      "id": "bd935aae-8afc-4d32-ac1a-4e5e38d1b7dd"
     },
     {
       "cell_type": "code",
@@ -396,7 +396,7 @@
         "\n",
         "아래와 같이 hello가 반복되는 자료가 있다고 하자."
       ],
-      "id": "5f35f8a0-0676-43bf-80be-f77ddb6a15e6"
+      "id": "b5fde689-6340-4469-9899-f7fc99375961"
     },
     {
       "cell_type": "code",
@@ -471,7 +471,7 @@
         "아래는 OpenAI Gym 라이브러리에서 제공하는 환경 Frozen Lake를 구체화하여\n",
         "변수 `env`에 저장하는 코드이다."
       ],
-      "id": "875bf3e7-e490-4ac2-9ff1-0f8cff8d2725"
+      "id": "45cfce92-a030-4c4a-abb7-d2a12f42013c"
     },
     {
       "cell_type": "code",
@@ -521,7 +521,7 @@
         "아래는 `show` 함수이며, 이는 `env`의 현재상태를 렌더링해주는 역할을\n",
         "한다."
       ],
-      "id": "a4e8798a-db4f-44e7-aa42-cfadf7e3203c"
+      "id": "b29b265b-cd15-46d3-9734-cba000be5eb6"
     },
     {
       "cell_type": "code",
@@ -545,7 +545,7 @@
       "source": [
         "`show()` 함수의 사용방법은 아래와 같다."
       ],
-      "id": "11735454-f19e-41d3-b376-724d501d7b3a"
+      "id": "e687bffa-63a0-41f2-af4c-fb7430453080"
     },
     {
       "cell_type": "code",
@@ -575,7 +575,7 @@
         "적당한 위의 환경에 대응하는 Agent를 설계하고 `q_net`를 이용하여 올바른\n",
         "행동을 학습하라. 아래는 학습된 결과의 예시이다."
       ],
-      "id": "5699a303-0516-450e-992b-8573aa4e61dd"
+      "id": "49c9cff1-3b20-46c8-a669-c5f526b9d88b"
     },
     {
       "cell_type": "code",
@@ -622,7 +622,7 @@
         "\n",
         "**힌트2:** 아래의 에이전트를 설계에 이용하세요"
       ],
-      "id": "141f1f17-5d31-4d3c-9cd3-e4254d349791"
+      "id": "12d93e47-0a7f-47bb-882a-37e59096d39d"
     },
     {
       "cell_type": "code",
@@ -687,9 +687,20 @@
         "다음을 읽고 참 거짓을 판단하라.\n",
         "\n",
         "`(1)` Dropout Layer를 추가하면 layer의 추가로 인해 모형이 더 복잡해지며\n",
-        "그 결과 모형이 과적합될 수 있다."
+        "그 결과 모형이 과적합될 수 있다.\n",
+        "\n",
+        "`(2)` CNN에서 `torch.nn.Conv2d()` 로 만들어지는 레이어는 입력이미지의\n",
+        "특징을 추출하는 역할을 하며, 훈련과정에서 학습되지 않는다.\n",
+        "\n",
+        "`(3)` MF-based 추천 시스템에서는 사용자의 성향과 항목의 성향을 내적하여\n",
+        "궁합을 계산한다.\n",
+        "\n",
+        "`(4)` `LSTM`은 `RNN`과 비교할때 장기기억에 강점을 보인다.\n",
+        "\n",
+        "`(5)` 강화 학습에서 에이전트가 현재 상태에서 취하는 행동은\n",
+        "’리워드(Reward)’라고 한다."
       ],
-      "id": "4633941e-57df-457e-bfa7-58bd7535d6d5"
+      "id": "1dc0b2f9-e73a-4529-888c-03734fe54e91"
     }
   ],
   "nbformat": 4,
@@ -710,7 +721,7 @@
       "mimetype": "text/x-python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.13"
+      "version": "3.11.8"
     }
   }
 }
